Fix octicon-link icon color on dark mode

--- a/src/compiler/crystal/tools/doc/html/css/style.css
+++ b/src/compiler/crystal/tools/doc/html/css/style.css
@@ -725,6 +725,10 @@ span.flag.lime {
   visibility: visible
 }
 
+.octicon-link {
+  color: black;
+}
+
 img {
   max-width: 100%;
 }
@@ -943,5 +947,9 @@ img {
 
   #sidebar-btn, #sidebar-btn-label {
     color: white; 
+  }
+
+  .octicon-link {
+    color: white;
   }
 }
